Stop crashing when trying to share a packaged audio.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="addbutton_permission_negative">No, gracias</string>
     <string name="youre_an_idiot_error">Ah, veo que estas perseguido…</string>
     <string name="share_chooser_title">Compartir vía</string>
+    <string name="not_yet_implemented_error">Todavía no se puede compartir este audio</string>
 </resources>
