--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -18,4 +18,5 @@
     <string name="addbutton_permission_negative">No, thanks</string>
     <string name="youre_an_idiot_error">Mmm I see, so you\'re hiding something…</string>
     <string name="share_chooser_title">Share vía</string>
+    <string name="not_yet_implemented_error">We can\'t share this audio yet</string>
 </resources>
