--- a/feature_addbutton/src/main/res/values-en/strings.xml
+++ b/feature_addbutton/src/main/res/values-en/strings.xml
@@ -1,18 +1,18 @@
 <resources>
-    <string name="permission_required">Permission required</string>
-    <string name="addbutton_name">Choose a funny name for your new button</string>
-    <string name="addbutton_save">Save</string>
-    <string name="addbutton_placeholder">I\'m f**k!ng druuunk</string>
-    <string name="addbutton_missing_parameter_error">Missing audio file</string>
-    <string name="addbutton_name_is_required_error">Name is required</string>
-    <string name="addbutton_feedback_saved_ok">Saved!</string>
-    <string name="addbutton_activity_label">Save as button</string>
-    <string name="addbutton_activity_title">New button</string>
-    <string name="addbutton_permission_required_error">Permission is required to prevent missing these funny audio
+    <string name="feature_addbutton_permission_required">Permission required</string>
+    <string name="feature_addbutton_name">Choose a funny name for your new button</string>
+    <string name="feature_addbutton_save">Save</string>
+    <string name="feature_addbutton_placeholder">I\'m f**k!ng druuunk</string>
+    <string name="feature_addbutton_missing_parameter_error">Missing audio file</string>
+    <string name="feature_addbutton_name_is_required_error">Name is required</string>
+    <string name="feature_addbutton_feedback_saved_ok">Saved!</string>
+    <string name="feature_addbutton_activity_label">Save as button</string>
+    <string name="feature_addbutton_activity_title">New button</string>
+    <string name="feature_addbutton_permission_required_error">Permission is required to prevent missing these funny audio
         messages
     </string>
-    <string name="addbutton_permission_positive">OK, save it!</string>
-    <string name="addbutton_permission_negative">No, thanks</string>
+    <string name="feature_addbutton_permission_positive">OK, save it!</string>
+    <string name="feature_addbutton_permission_negative">No, thanks</string>
 
-    <string name="youre_an_idiot_error">Mmm I see, so you\'re hiding something…</string>
+    <string name="feature_addbutton_youre_an_idiot_error">Mmm I see, so you\'re hiding something…</string>
 </resources>
