Let users delete custom buttons

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="share_chooser_title">Compartir vía</string>
     <string name="not_yet_implemented_error">Todavía no se puede compartir este audio</string>
+    <string name="undo">Deshacer!</string>
+    <string name="button_deleted">Botón borrado</string>
+    <string name="feedback_custom_buttons_cant_be_deleted_yet">Los butones personalizados todavía no se pueden eliminar</string>
+    <string name="feedback_generic_error">Uh! Ocurrio un error inesperado…</string>
 </resources>
