--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="share_chooser_title">Share vía</string>
     <string name="not_yet_implemented_error">We can\'t share this audio yet</string>
+    <string name="undo">Undo!</string>
+    <string name="button_deleted">Button deleted</string>
+    <string name="feedback_custom_buttons_cant_be_deleted_yet">Custom buttons still can\'t be deleted</string>
+    <string name="feedback_generic_error">Ooops! I did it again…</string>
 </resources>
