--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -7,4 +7,5 @@
     <string name="button_deleted">Botón borrado</string>
     <string name="feedback_custom_buttons_cant_be_deleted_yet">Los butones personalizados todavía no se pueden eliminar</string>
     <string name="feedback_generic_error">Uh! Ocurrio un error inesperado…</string>
+    <string name="app_feature_addbutton_activity_label_dynamic_feature">Crear nuevo botón</string>
 </resources>
