--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,10 @@
     <string name="app_name">Sos Un Boton</string>
 
     <string name="app_share_chooser_title">Share vía</string>
-    <string name="app_not_yet_implemented_error">We can\'t share this audio yet</string>
+    <string name="app_feedback_share_generic_error">We can\'t share this audio yet</string>
     <string name="app_undo">Undo!</string>
-    <string name="app_button_deleted">Button deleted</string>
-    <string name="app_feedback_custom_buttons_cant_be_deleted_yet">Custom buttons still can\'t be deleted</string>
+    <string name="app_feedback_button_deleted">Button deleted</string>
+    <string name="app_feedback_bundled_buttons_cant_be_deleted_yet">Bundled buttons still can\'t be deleted</string>
     <string name="app_feedback_generic_error_contact_support">Oops! I did it again, please contact support</string>
     <string name="app_navigation_menu_item_home">Home</string>
     <string name="app_navigation_menu_item_search">Search</string>
